[package]
name = "bitcoin-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorize = "0.1.0"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
proptest = "1.1.0"
rand = "0.8.5"
thiserror = "1.0.38"
