[package]
name = "bitcoin-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
zeroize = { version = "1.6.0", default-features = false, features = ["derive"] }
rand_chacha = "0.3.1"
[profile.release]
debug = true
